[package]
name = "printer_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winspool"] }
winit = "0.28.6"
printpdf = "0.5.0"

[lib]
name = "printer_driver"
path = "src/lib.rs"
